docs(docs-infra): fix docs pages overflow when specific example-viewer exists (#61384)
enforce content to be fluid until a specific max width, and rollback breakpoints to be applied when 1430px is the current win size
as widths between 1430px and 1431px will be broken

PR Close #61384

--- a/adev/src/app/features/home/components/home-animation/home-animation.component.scss
+++ b/adev/src/app/features/home/components/home-animation/home-animation.component.scss
@@ -198,7 +198,7 @@ $transition: 200ms linear;
           }
         }
 
-        @include mq.for-big-desktop-up {
+        @include mq.for-extra-large-desktop-up {
           & {
             transform: scale(0.5);
           }
@@ -331,12 +331,10 @@ $transition: 200ms linear;
           }
 
           @mixin meteor-gradient($startColor, $endColor) {
-            background: linear-gradient(
-              calc(var(--math-pi) + var(--meteor-tilt-angle)),
-              $startColor 0,
-              $endColor 66%,
-              transparent 100%
-            );
+            background: linear-gradient(calc(var(--math-pi) + var(--meteor-tilt-angle)),
+                $startColor 0,
+                $endColor 66%,
+                transparent 100%);
           }
 
           &.type-1::after {
@@ -391,7 +389,7 @@ $transition: 200ms linear;
         transform: scale(1);
       }
 
-      .build-for-everyone-layer > .title {
+      .build-for-everyone-layer>.title {
         background-position-x: 0;
       }
     }
